--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# Compiled class file
-*.class
+.classpath
+.project
+.settings
+.factorypath
+build
+target
+bin
 
-# Log file
-*.log
+## ignore all Idea files except for common codestyle settings
+*.iml
+.idea/*
+!.idea/checkstyle-idea.xml
+!.idea/google-java-format.xml
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+work
+atlassian-ide-plugin.xml
+.work/
+/work/
+/.idea/
+work/*
