--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
             </exclusions>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <licenses>
