--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,8 @@
             <groupId>org.redpen</groupId>
             <artifactId>redpen-jenkins-core</artifactId>
             <version>1.0.13</version>
+            <systemPath>${basedir}/lib/redpen-jenkins-core-1.0.13.jar</systemPath>
+            <scope>system</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.sonatype.sisu</groupId>
