--- a/pom.xml
+++ b/pom.xml
@@ -121,10 +121,8 @@
 
         <dependency>
             <groupId>org.redpen</groupId>
-            <artifactId>redpen-jenkins-core</artifactId>
-            <version>1.0.13</version>
-            <systemPath>${basedir}/lib/redpen-jenkins-core-1.0.13.jar</systemPath>
-            <scope>system</scope>
+            <artifactId>redpen-jenkins-core-package</artifactId>
+            <version>1.0.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.sonatype.sisu</groupId>
