add redpen-jenkins-core-package and config

--- a/pom.xml
+++ b/pom.xml
@@ -163,11 +163,19 @@
             <id>repo.jenkins-ci.org</id>
             <url>https://repo.jenkins-ci.org/public/</url>
         </repository>
+        <repository>
+            <id>org.redpen</id>
+            <url>https://maven.pkg.github.com/AjmeraInfotech/redpen-jenkins-core-package</url>
+        </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
             <id>repo.jenkins-ci.org</id>
             <url>https://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>org.redpen</id>
+            <url>https://maven.pkg.github.com/AjmeraInfotech/redpen-jenkins-core-package</url>
         </pluginRepository>
     </pluginRepositories>
 </project>
