--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
     <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
     <properties>
-        <revision>1.1</revision>
+        <revision>1.0</revision>
         <changelist>-SNAPSHOT</changelist>
+        <gitHubRepo>jenkinsci/pipeline-status-reporter-by-redpen-plugin</gitHubRepo>
 
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
         <jenkins.version>2.320</jenkins.version>
         <java.level>8</java.level>
-        <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
         <sonar.organization>ajmerainfotech</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
